--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,4 @@
 #Authors of this AirBnB clone codes
 #Names and email address
 Iradukunda Ruth <r.iradukund@alustudent.com>
+Raini Benaiah <b.rainia@alustudent.com>
